# Bot-Back-End

./: .gitignore  Cargo.toml  README.md
src/: main.rs
src/clients/: mod.rs  mongodb.rs  reqwest.rs  rusoto.rs
src/configs/: mod.rs  mongodb.rs  notification.rs  reqwest.rs  rusoto.rs  scheduler.rs  server.rs
src/errors/: error.rs  handler.rs
src/models/: config.rs  jira.rs  mod.rs  projects.rs  purge.rs  report.rs  robot.rs  robots.rs  users.rs
src/routes/: mod.rs  projects.rs  report.rs  robots.rs
src/utils/: client.rs  mod.rs  scheduler.rs
