[package]
name = "robot"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = { version = "4" }
actix-rt = { version = "2.8.0" }
serde = { version = "1.0", features = ["derive"] }
serde_with = { version = "2.2.0" }
serde_json = { version = "1.0.91" }
http-auth-basic = { version = "0.3.3" }
reqwest = { version = "0.11.13" }
mongodb = { version = "2.3.1" }
futures = { version = "0.3.25" }
env_logger = { version = "0.10.0" }
lettre = { version = "0.10.1" }
cron = { version = "0.12.0" }
chrono = { version = "0.4.23", features = ["serde"] }
dotenv = { version = "0.15.0" }