[package]
name = "robot"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.26.0" }
futures = { version = "0.3.25" }
actix-web = { version = "4" }
actix-rt = { version = "2.8.0" }
actix-cors = { version = "0.6.4" }
serde = { version = "1.0", features = ["derive"] }
serde_with = { version = "2.2.0" }
serde_json = { version = "1.0.91" }
reqwest = { version = "0.11.13" }
mongodb = { version = "2.3.1" }
env_logger = { version = "0.10.0" }
log = { version = "0.4.17" }
cron = { version = "0.12.0" }
chrono = { version = "0.4.23", features = ["serde"] }
dotenv = { version = "0.15.0" }
base64 = { version = "0.13.0" }
lettre = { version = "0.10.1" }
strsim = { version = "0.10.0" }
rayon = { version = "1.7.0" }
